Fix replaced element definiteness as a grid-item https://bugs.webkit.org/show_bug.cgi?id=221337

Patch by Ziran Sun <zsun@igalia.com> on 2021-03-08
Reviewed by Javier Fernandez.

LayoutTests/imported/w3c:

The test is imported from WPT.

* web-platform-tests/css/css-grid/grid-items/percentage-size-indefinite-replaced-expected.html: Added.
* web-platform-tests/css/css-grid/grid-items/percentage-size-indefinite-replaced.html: Added.
* web-platform-tests/css/css-grid/grid-item-percentage-quirk-001-expected.html: Added.
* web-platform-tests/css/css-grid/grid-item-percentage-quirk-001.html: Added.
* web-platform-tests/css/css-grid/grid-item-percentage-quirk-002-expected.html: Added.
* web-platform-tests/css/css-grid/grid-item-percentage-quirk-002.html: Added.

Source/WebCore:

When resolving indefinite percentage sizes against an intrinsic size for replaced grid item, if 'height'
has a computed value of 'auto', and the element has an intrinsic ratio then the used value of 'height'is:
(used width) / (intrinsic ratio) according to http://www.w3.org/TR/CSS21/visudet.html#inline-replaced-height
(10.6.2 Inline, replaced elements).

This changes makes RenderReplaced::hasReplacedLogicalHeight to return false when a replaced grid-item
has an indefinite containing-block override logical-height. This is to make sure
RenderReplaced::computeReplacedLogicalHeight() handles cases described correctly.

It is an import of chromium CL at https://chromium-review.googlesource.com/c/chromium/src/+/2562558
This change only picks parts that is applicable for WebKit from the chromium CL. It also fix test
css/css-grid/grid-item-percentage-quirk-001.html in WPT.

Test: imported/w3c/web-platform-tests/css/css-grid/grid-items/percentage-size-indefinite-replaced.html
Test: imported/w3c/web-platform-tests/css/css-grid/grid-item-percentage-quirk-001.html
Test: imported/w3c/web-platform-tests/css/css-grid/grid-item-percentage-quirk-002.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::hasAutoHeightOrContainingBlockWithAutoHeight const):

Canonical link: https://commits.webkit.org/235033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274099 268f45cc-cd09-0410-ab3c-d52691b4dbfc