Source/WebCore/rendering/RenderBoxModelObject.cpp
@@ -282,7 +282,7 @@ bool RenderBoxModelObject::hasAutoHeightOrContainingBlockWithAutoHeight() const
     }
     
     if (thisBox && thisBox->isGridItem() && thisBox->hasOverridingContainingBlockContentLogicalHeight())
-        return false;
+        return thisBox->overridingContainingBlockContentLogicalHeight() == WTF::nullopt;
     
     if (logicalHeightLength.isAuto() && !isOutOfFlowPositionedWithImplicitHeight(*this))
         return true;
